@@ -1,1 +1,1 @@
-New INSTALL
+See README file.
